Fixed modal on mobile

--- a/style.css
+++ b/style.css
@@ -1035,6 +1035,12 @@ RESPONSIVE STYLING
         /* font-size: small; */
     }
 
+    .modal-content {
+        width: 80%; /* Could be more or less, depending on screen size */
+        margin: 15% auto; /* 15% from the top and centered */
+        padding: 20px;
+    }
+
     #landing-blob {
         width: 60%;
         /* height: 100%; */
